# derivatives

./: .gitignore  CONTEXT.md  Dockerfile  EXAMPLES.md  ORIGINAL_REQUEST.md  OVERVIEW.md  P5_ROADMAP.md  P6_ROADMAP.md  PROJECT.md  README.md  ROADMAP.md  ROADMAP_ABSOLUTE_MAX.md  ROADMAP_P4_ONWARDS.md  TEST_INFRA.md  TEST_READY.md  TIER1_ORCHESTRATOR_PROMPT.md  build_all_tex.bat  build_all_tex.sh  make_thesis_assets.sh  pyproject.toml  setup.py  setup_and_run.bat  setup_and_run.sh
app_frontend/: package-lock.json  package.json
benchmarks/: benchmark_tensorrt.py  calibration_hurst_benchmark.py  convergence_N_factors.py  convergence_results.txt  greeks_hedge_backtest.py  greeks_hedge_results.txt  mc_vs_cos_results.txt  noise_robustness.py  noise_robustness_results.txt  profile_vram.py  run_optimization_benchmarks.py  scale_vram_benchmark.py  speed_benchmark.py  streaming_calibration_demo.py  streaming_demo_results.txt  t004_convergence.py  t004_convergence_results.txt  validate_fno_v2.py  vs_cuda_mc.py
deploy/: Dockerfile  docker-compose.yml
dev/: fim_analysis.py
notebooks/: 01_spx_calibration.ipynb  02_surface_completion.ipynb  03_vix_analysis.ipynb  04_greeks_portfolio.ipynb  05_crypto_calibration.ipynb  06_batch_calibration.ipynb  07_joint_calibration.ipynb  08_heston_vs_rheston.ipynb  09_sabr_ssvi_calibration.ipynb  09_vix_joint_calibration.ipynb  10_hurst_dynamics.ipynb  10_local_vol_dupire.ipynb  11_rbergomi_calibration.ipynb  12_neural_sde_calibration.ipynb  13_signature_forecasting.ipynb  14_deep_hedging_european.ipynb  15_barrier_hedging_costs.ipynb  16_adversarial_market_gen.ipynb  17_mlsv_comparison.ipynb  18_fx_sabr_calibration.ipynb  19_rates_swaption_calibration.ipynb  20_commodity_calibration.ipynb  21_cross_asset_roughness.ipynb  22_model_comparison.ipynb  23_data_efficiency.ipynb  24_latency_profiling.ipynb  25_hedging_backtest.ipynb  25_primitives_validation.ipynb  26_portfolio_risk_greeks.ipynb  26_projection_validation.ipynb  27_fno_wrapper_validation.ipynb  (+18 more)
results/: size_1000.json  (+6 more)
(+435 files in other folders)
