[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepvol"
dynamic = ["version"]
description = "Deep Volatility: Neural Network Pricing, Calibration, and Hedging Framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Execorn Derivatives Team", email = "info@execorn.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pandas>=1.4.0",
    "torchdiffeq>=0.2.3",
    "py_vollib_vectorized>=0.1.1",
    "yfinance>=0.2.0",
    "torchsde>=0.2.5",
    "iisignature>=0.24",
]

[project.optional-dependencies]
app = [
    "streamlit>=1.20.0",
    "plotly>=5.13.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.2",
]
api = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "aiohttp>=3.8.0",
    "httpx>=0.23.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.0.250",
]

[project.scripts]
deepvol-api = "deepvol.api.server:main"
deepvol-dashboard = "deepvol.app.dashboard:main"
deepvol-calibrate = "deepvol.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deepvol*"]

[tool.setuptools.dynamic]
version = {attr = "deepvol.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring live market data / network (run with INTEGRATION=1)",
]
